# small_sat

./: .gitignore  Cargo.toml  out.txt  paper.tex  readme.md  refs.bib
src/: clause.rs  conflict_clause.rs  database.rs  dimacs.rs  lib.rs  literal.rs  luby.rs  sat.rs  solver.rs  stats.rs  var_state.rs  var_state_cache.rs  watch_list.rs  watched.rs  watchlist.rs
